--- a/apps/client/templates/client/Cliente_list.html
+++ b/apps/client/templates/client/Cliente_list.html
@@ -24,7 +24,9 @@
             </form>
         </div>
     </div>
-
+    <div id="caixa">
+        <h2 id="infosPesquisa">Você pode pesquisar pelo nome do cliente.</h2>   
+  </div>
     {% if cadastro_list %}
         <div class="table-responsive">
             <table class="table table-striped table-hover">
