--- a/apps/agency/templates/buscasAgencia/dadosAgencia.html
+++ b/apps/agency/templates/buscasAgencia/dadosAgencia.html
@@ -6,6 +6,15 @@
     <title>Title</title>
     <link href="{% static 'global/css/buscasFuncionario/dados_print.css' %}" rel="stylesheet" type="text/css"/>
 </head>
+
+<style>
+
+a {
+  text-decoration: none; /* Remove o sublinhado */
+  color: inherit; /* Mantém a cor do texto conforme o estilo do botão */
+}
+</style>
+
 <body>
 
 
@@ -56,13 +65,19 @@
         <p><strong>Logradouro: </strong> {{ cadastro.logradouro }}</p>
         <p><strong>Número: </strong> {{ cadastro.numero }}</p>
   
+        {% if cadastro.complemento %}
+        <p><strong>Complemento: </strong> {{ cadastro.complemento }}</p>
+      {% endif %}
+
         {% if cadastro.observacao %}
         <p><strong>Observação: </strong> {{ cadastro.observacao }}</p>
         {% endif %}
 
         </div>
 
-    <button class="btnvoltar"><a href="{% url 'ListagemAgencia' %}">Voltar</a></button>
+
+        
+    <a href="{% url 'ListagemAgencia' %}"><button class="btnvoltar">Voltar</button></a>
 {% endfor %}
 
 
