--- a/apps/service/templates/service/Vendas_form.html
+++ b/apps/service/templates/service/Vendas_form.html
@@ -28,7 +28,8 @@
        </div>
        {% endif %}
 
-       <form method="POST">
+       <form method="post" enctype="multipart/form-data">
+
            {% csrf_token %}
 
 
