--- a/apps/worker/templates/home.html
+++ b/apps/worker/templates/home.html
@@ -245,6 +245,8 @@ main {
        <li><a href="{% url 'rank' %}">Ranking</a></li>
        <li><a href="{% url 'ListagemFuncionario' %}">Lista Funcionários</a></li>
        <li><a href="{% url 'contas' %}">Fluxo de caixa</a></li>
+       <li><a href="{% url 'listagemFluxoMensal' %}">Listagem - Fluxo mensal</a></li>
+
 
            {% endif %}
        {% endif %}
