--- a/apps/client/templates/client/Cliente_form.html
+++ b/apps/client/templates/client/Cliente_form.html
@@ -9,6 +9,11 @@
     <title>Registro de Cliente</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'global/css/form.css' %}"> 
+<style>
+    #id_cpf_helptext{
+        color:#ff0202b5;
+    }
+</style>
 
 </head>
 <body>
