--- a/apps/worker/templates/worker/Funcionario_form.html
+++ b/apps/worker/templates/worker/Funcionario_form.html
@@ -50,7 +50,9 @@
                     break;
                 case 'Exec':
                     novasOpcoes = '<option value="Executivo contas">Executivo contas</option>' +
-                                  '<option value="Despachante externo">Despachante externo</option>';
+                                  '<option value="Despachante externo">Despachante externo</option>'+
+                                  '<option value="Despachante externo e Executivo contas">Executivo contas e Despachante externo</option>';
+
                     break;
                 case 'Vend':
                     novasOpcoes = '<option value="Despachante">Despachante</option>' +
