--- a/apps/service/templates/service/Venda_list.html
+++ b/apps/service/templates/service/Venda_list.html
@@ -65,10 +65,9 @@
                                         <img src="{% static 'imagens/check.svg' %}" alt="Concluir" style="height: 15px; width: 15px;"> Concluir
                                     </a>
                                 {% endif %}
-                                <a href="{% url 'venda_atualizar' todo.pk %}?page={{ page_obj.number }}" 
-                                class="btn {% if user.departamento == 'Adm' and todo.status_executivo and not todo.executivo%}btn-success{% else %}btn-secondary{% endif %} btn-sm">
-                                 <img src="{% static 'imagens/edit.svg' %}" alt="Editar" style="height: 15px; width: 15px;"> Editar
-                             </a>
+                                <a href="{% url 'venda_atualizar' todo.pk %}?page={{ page_obj.number }}" class="btn btn-secondary btn-sm">
+                                    <img src="{% static 'imagens/edit.svg' %}" alt="Editar" style="height: 15px; width: 15px;"> Editar
+                                </a>
                                 <a href="{% url 'venda_deletar' todo.pk %}?page={{ page_obj.number }}" class="btn btn-danger btn-sm">
                                     <img src="{% static 'imagens/delete.svg' %}" alt="Excluir" style="height: 15px; width: 15px;"> Excluir
                                 </a>
