--- a/apps/service/templates/service/Vendas_form.html
+++ b/apps/service/templates/service/Vendas_form.html
@@ -70,6 +70,7 @@
        <option value="Identidade" {% if form.initial.tipo_servico == 'Identidade' %}selected{% endif %}>Identidade</option>
        <option value="Global Visa" {% if form.initial.tipo_servico == 'Global Visa' %}selected{% endif %}>Global Visa</option>
        <option value="Atendimento Domiciliar" {% if form.initial.tipo_servico == 'Atendimento Domiciliar' %}selected{% endif %}>Atendimento Domiciliar</option>
+       <option value="Serviços para brasileiros residentes no exterior" {% if form.initial.tipo_servico == "Serviços para brasileiros residentes no exterior" %}selected{% endif %}>Serviços para brasileiros residentes no exterior</option>
        <option value="Outros" {% if form.initial.tipo_servico == 'Outros' %}selected{% endif %}>Outros</option>
    </select>
 </div>
