--- a/apps/worker/templates/home.html
+++ b/apps/worker/templates/home.html
@@ -214,6 +214,10 @@ main {
     margin-top: 16vh; 
    }
 
+   #finalVend{
+    margin-top: 62vh; 
+   }
+
    #finalExe{
     margin-top: 68vh; 
    }
@@ -339,7 +343,7 @@ main {
            <!--ATUALIZAR NO CSS-->
 
            {% if user is not None %}
-        {% if 'Adm' in user.departamento or 'Vend' in user.departamento%}
+        {% if 'Adm' in user.departamento %}
            <li id="finalAdm"><a href="{% url 'atualizar_perfil' user.pk %}"> ATUALIZAR PERFIL </a></li>
            {% endif %}
            {% endif %}
@@ -349,6 +353,12 @@ main {
               <li id="finalExe"><a href="{% url 'atualizar_perfil' user.pk %}"> ATUALIZAR PERFIL </a></li>
               {% endif %}
               {% endif %}
+
+              {% if user is not None %}
+              {% if 'Vend' in user.departamento %}
+                 <li id="finalVend"><a href="{% url 'atualizar_perfil' user.pk %}"> ATUALIZAR PERFIL </a></li>
+                 {% endif %}
+                 {% endif %}
    </ul>
    
 
